# solana-game-preset

./: Cargo.toml  README.md
app/: package.json
app/components/: ChopTreeButton.tsx  DisplayGameState.tsx  InitPlayerButton.tsx  SessionKeyButton.tsx
app/contexts/: GameStateProvider.tsx  WalletContextProvider.tsx
app/idl/: lumberjack.json  lumberjack.ts
app/utils/: anchor.ts
lumberjack/: README.md
lumberjack/app/components/: ChopTreeButton.tsx  InitPlayerButton.tsx
lumberjack/app/contexts/: GameStateProvider.tsx
lumberjack/app/idl/: lumberjack.ts
lumberjack/app/utils/: anchor.ts
lumberjack/program/programs/lumberjack/: Cargo.toml
lumberjack/program/programs/lumberjack/src/: constants.rs  lib.rs
lumberjack/program/tests/: lumberjack.ts
lumberjack/unity/Lumberjack/Assets/Socket/: SocketStatusWidget.cs  SolPlayWebSocketService.cs  WebSocket.cs  (+1 more)
lumberjack/unity/Lumberjack/ProjectSettings/: EditorBuildSettings.asset
program/: .gitignore  Anchor.toml  Cargo.toml  jest.config.js  package.json  tsconfig.json
program/jesttests/: energy-refill-time.test.ts
program/programs/lumberjack/: Cargo.toml
program/programs/lumberjack/src/: lib.rs
program/programs/lumberjack/src/instructions/: chop_tree.rs
program/programs/lumberjack/src/state/: player_data.rs
program/tests/: lumberjack.ts
unity/Lumberjack/Assets/Socket/: SocketStatusWidget.cs  UnityMainThreadDispatcher.cs
unity/Lumberjack/ProjectSettings/: ProjectSettings.asset
unity/Lumberjack/UserSettings/: EditorUserSettings.asset
unity/Lumberjack/UserSettings/Layouts/: default-2021.dwlt
(+20 files in other folders)
